<resources>
    <string name="app_name">IndexCards</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_name">Name:</string>
    <string name="lbl_btnQASwitch">Switch</string>
    <string name="lblbtnSaveIndexCard">Save</string>


    <!--BottomAppBar-->
    <string name="bottom_app_bar_chevron_content_desc">Open or close bottom navigation drawer</string>
    <string name="bottom_app_bar_logo_content_desc">Reply logo</string>
    <string name="bottom_nav_drawer_profile_image_content_desc">profile avatar image</string>
    <string name="fab_compose_email_content_description">Compose new email</string>
    <string name="fab_reply_email_content_description">Reply to email</string>

    <!--BottomNavigationDrawer-->
    <string name="navigation_inbox">Inbox</string>
    <string name="navigation_starred">Starred</string>
    <string name="navigation_sent">Sent</string>
    <string name="navigation_trash">Trash</string>
    <string name="navigation_spam">Spam</string>
    <string name="navigation_drafts">Drafts</string>
    <string name="switch_to_answer">Answer</string>
    <string name="swith_to_question">Question</string>
    <string name="text_headline_6">Headline6</string>
    <string name="app_bar_menu_share">Share</string>
    <string name="app_bar_menu_bookmark">Bookmark</string>
    <string name="app_bar_menu_search">Search</string>

</resources>