<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorAppBackground_darktheme"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="?attr/toolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_4"
        android:background="@color/colorAppbars_darktheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label"
        app:menu="@menu/top_app_bar_menu"
        app:navigationIcon="@drawable/ic_menu_control_normal_24dp"
        app:title="@string/text_headline_6" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:id="@+id/mainActCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        tools:context=".ui.MainActivity">


        <include
            layout="@layout/content_main"
            android:backgroundTint="@color/colorAppBackground_darktheme" />

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/colorAppbars_darktheme"
            app:contentInsetStart="0dp"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="@dimen/bottom_app_bar_fab_cradle_margin"
            app:fabCradleRoundedCornerRadius="@dimen/bottom_app_bar_fab_cradle_corner_radius"
            app:hideOnScroll="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/bottom_app_bar_content_container_left"

                    android:layout_width="0dp"
                    android:layout_height="@dimen/min_touch_target_size"
                    android:layout_marginVertical="@dimen/grid_0_5"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:foreground="@drawable/bottom_app_bar_title_foreground"
                    android:gravity="center_vertical"

                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/grid_0_5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/bottom_app_bar_chevron"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/bottom_app_bar_chevron_content_desc"
                        app:srcCompat="@drawable/ic_arrow_drop_up"
                        app:tint="?attr/colorOnPrimarySurface" />

                    <ImageView
                        android:id="@+id/bottom_app_bar_logo"
                        android:layout_width="@dimen/bottom_app_bar_logo_size"
                        android:layout_height="@dimen/bottom_app_bar_logo_size"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/grid_1"
                        android:contentDescription="@string/bottom_app_bar_logo_content_desc" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bottom_app_bar_content_container_right"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/min_touch_target_size"
                    android:layout_marginVertical="@dimen/grid_0_5"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:foreground="@drawable/bottom_app_bar_title_foreground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/grid_0_5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/bottom_app_bar_aq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="@dimen/grid_1"
                        android:clickable="true"
                        android:text="@string/switch_to_answer"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="?attr/colorControlNormal"
                        android:visibility="invisible" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fab_compose_email_content_description"
            app:backgroundTint="@color/colorSecondary_darktheme"
            app:layout_anchor="@id/bottom_app_bar" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>